dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: my-argo-guestbook
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
